# mai

./: .gitignore  .golangci.yml  AGENTS.md  LICENSE.txt  Makefile  README.md  autogen.sh  config.mk  go.mod  main.go
.github/workflows/: ci.yml  release.yml
ai-mcpd/: Makefile
clients/ai/: Makefile  ai.go  llm.go  repl.go
clients/ai-repl/: Makefile  llm.go  main.go  repl.go
clients/ai-tools/: Makefile  README.md
clients/mcpcli/: main.go
clients/mcpd-cli/: main.go
doc/: BETTER_MCPLIB.md  SKILLS_GUIDE.md  acp.md  agents.json  chats.md  claude.md  lmstudio.md  local.md  mcps.json  tokencount.sh  tool-plan.md  tools-protocol.md
doc/schemas/: person.json  plan.json
doc/vim/: Makefile  README.md  mai.vim  prompts.txt
doc/www/: index.html  script.js  style.css
prompts/: compact.md  devplan.md  fix.md  followup.md  memory.md  plan.md  tool.md  topic.md  translate.md
servers/wttr/: README.md  main.go
src/: Makefile
src/acp/: Makefile  main.go
src/bot/: Makefile  README.md  config.go  config.json.sample  executor.go  go.mod  irc.go  logger.go  main.go  repl.go  telegram.go
src/mcpd/: Makefile
src/mcps/: Makefile
src/repl/: Makefile  acp.go  art.go  command_exec.go  conf.go  demo.go  files.go  go.mod  go.sum  llm.go  main.go  markdown.go  mcpmode.go  mcprompt.go  memory.go  newtools.go  prompts.go  react_json.go  react_text.go  repl.go  (+26 more)
src/ui/gnome/: Makefile  meson.build
src/ui/gnome/src/: chat_window.vala  main.vala  mcp_client.vala  models.vala  settings_window.vala  tools_view.vala
templates/: travel.md
vim/: Makefile  README.md  mai.vim
(+195 files in other folders)
